# oxid

./: README.md  app.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  ui.config.json
.github/workflows/: release.yml
src/: app.tsx  layout.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Sidebar/: Sidebar.tsx  SidebarItem.tsx
src/components/navigation/: desktop-navigation.tsx  index.tsx  mobile-navigation.tsx  types.ts
src/components/tasks/: add-task-dialog.tsx  add-to-agenda-dialog.tsx  remove-task-button.tsx  task-list.tsx  types.ts
src/components/ui/: button.tsx  dialog.tsx  drawer.tsx  tabs.tsx  text-field.tsx
src/context/: task-context.tsx
src/lib/: db.ts  tasks.ts
src/routes/: index.tsx
src/routes/agenda/: backlog.tsx  day-view.tsx  index.tsx  month-view.tsx  week-view.tsx
src/routes/oxids/: index.tsx
src/routes/tasks/: index.tsx
src/stores/: task-store.ts
